--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,27 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
 @import url('../../node_modules/fullpage.js/dist/fullpage.min.css');
 
+// Color group
+@blue: #011627;
+@white: #FDFFFC;
+@green: #2EC4B6;
+@red: #e71D36;
+@yellow: #FF9F1C;
+// Font setting
 @font-size: 1rem;
+@font-Kaushan: 'Kaushan Script';
+@font-Handlee: 'Handlee';
+@font-family: 'Amiri', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+// Animation timer
+@second: 0.6s;
 
 :host {
-  font-family: 'Amiri', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: @font-size;
-  box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-.section {
-  text-align:center;
-  font-size: 3em;
-}
-
-/* Responsive Styles */
-@media screen and (max-width: 767px) {
-
-
-}
-
-@media screen and (max-width: 575px) {
-
 }
