--- a/src/app/views/index/index.component.less
+++ b/src/app/views/index/index.component.less
@@ -1,54 +1,406 @@
 @import '../../app.component.less';
 
-@second: 0.6s;
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 400;
-  color: #011627;
-}
-
-h1 {
-  font-size: @font-size * 4;
-}
-
-h2 {
-  font-size: @font-size * 3.5;
-}
-
-h3 {
-  font-size: @font-size * 3;
-}
-
-h4 {
-  font-size: @font-size * 2.5;
-}
-
-h5 {
-  font-size: @font-size * 2;
-}
-
-h6 {
-  font-size: @font-size * 1.5;
-}
-
-.center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: opacity (@second * 3) ease-in-out;
-}
-
-.container {
+.header {
+  position: fixed;
   width: 100vw;
-  height: 100vh;
-  opacity: 0;
-  transition: all (@second * 7) ease-in-out;
-  background-color: #fdfffc;
+  z-index: 100;
+
+  nav {
+    display: flex;
+    justify-content: space-around;
+    min-height: 6vh;
+    font-family: @font-family;
+    align-items: center;
+    font-weight: lighter;
+
+    .logo {
+      color: @white;
+      text-transform: uppercase;
+      letter-spacing: 5px;
+      font-size: @font-size * 1.5;
+      font-weight: lighter;
+    }
+
+    .nav-links {
+      display: flex;
+      width: 30%;
+      justify-content: space-around;
+
+      li {
+        list-style: none;
+        border: 1px solid @white;
+        border-radius: 25px;
+        min-width: 125px;
+        text-align: center;
+        margin-right: 10px;
+
+        a {
+          color: @white;
+          text-decoration: none;
+          letter-spacing: 3px;
+          font-size: @font-size;
+          text-transform: lowercase;
+          display: block;
+        }
+
+        &:hover {
+          background-color: @white;
+          opacity: 0.75;
+        }
+      }
+    }
+  }
 }
 
+.marker {
+  position: fixed;
+  top: 50%;
+  right: 10px;
+  z-index: 100;
+  transform: translateY(-50%);
+
+  nav {
+    display: flex;
+    justify-content: space-around;
+
+    li {
+      list-style: none;
+      border: 1px solid @white;
+      border-radius: 7px;
+      width: 14px;
+      height: 14px;
+      margin-bottom: 10px;
+      margin-top: 10px;
+
+      a {
+        color: transparent;
+        margin-left: -10px;
+        margin-top: -10px;
+      }
+
+      &:hover {
+        border-width: 2px;
+      }
+    }
+
+    .active {
+      background-color: @white;
+    }
+  }
+}
+
+section {
+  font-size: @font-size * 3;
+  color: @white;
+  background-size: cover;
+
+  .container {
+    position: fixed;
+    display: flex;
+    margin: 6.5vh 30px;
+    width: 93.5vw;
+    height: 88vh;
+    justify-content: space-around;
+  }
+}
+
+.home {
+  background-image: radial-gradient(circle at 70% 60%, rgba(253, 255, 252, 0.05),  rgba(253, 255, 252, 0.01), rgba(253, 255, 252, 0), rgba(253, 255, 252, 0), rgba(253, 255, 252, 0));
+
+  .banner {
+    margin-top: 20%;
+
+    h1 {
+      display: inline;
+      font-family: @font-family;
+      font-size: @font-size * 3;
+      font-weight: lighter;
+      letter-spacing: 5px;
+    }
+
+    h4 {
+      display: inline;
+      font-family: @font-family;
+      font-size: @font-size * 1.5;
+      font-weight: lighter;
+      letter-spacing: 5px;
+    }
+
+    .underline {
+      border-bottom: 1px solid @white;
+    }
+  }
+
+  .portrait {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+
+    img {
+      width: 60%;
+      opacity: 0.8;
+      float: right;
+      margin-bottom: -15px;
+      margin-right: -15px;
+    }
+  }
+}
+
+.about {
+  font-family: @font-family;
+  font-size: @font-size;
+
+  .profile {
+    margin-top: 18vh;
+    margin-left: 15%;
+
+    .signature {
+      margin-top: 30px;
+
+      .underline {
+        border-bottom: 1px solid @white;
+
+        sub {
+          font-family: @font-Handlee, @font-family;
+          font-size: @font-size * 2;
+          color: @red;
+        }
+
+        h1 {
+          margin-top: 40px;
+          display: inline;
+          font-family: @font-Kaushan, @font-family;
+          font-size: @font-size * 2.5;
+          font-weight: lighter;
+          letter-spacing: 5px;
+          color: @white;
+        }
+      }
+    }
+
+    .description {
+      width: 80%;
+      letter-spacing: 3px;
+
+      p {
+        line-height: @font-size * 2;
+        padding: 20px;
+        text-align: justify;
+      }
+
+      p::first-letter {
+        font-size: @font-size * 2;
+      }
+    }
+  }
+
+  .message {
+    margin-top: 20vh;
+    margin-right: 10%;
+    width: 20%;
+    max-width: 350px;
+    min-width: 285px;
+    max-height: 500px;
+    min-height: 400px;
+    border-radius: 15px;
+    justify-content: space-around;
+    background-color: fade(@blue, 90%);
+    padding-top: 40px;
+    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0px 0px 50px rgba(0, 0, 0, 0.2);
+
+    div {
+      margin: 20px;
+    }
+
+    .message-logo-container {
+      margin: auto;
+      width: 100px;
+      height: 100px;
+      border-radius: 100px;
+      margin-top: -90px;
+      background-color: @red;
+      padding: 30px;
+      box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0px 0px 50px rgba(0, 0, 0, 0.2);
+      transition: all 0.2s;
+
+      .message-logo {
+        margin: auto;
+        width: 40px;
+        height: 40px;
+        background-color: @white;
+        opacity: 90%;
+        -webkit-mask: url('../../../assets/email.svg') no-repeat center;
+        mask: url('../../../assets/email.svg') no-repeat center;
+      }
+
+      &:hover {
+        transform: rotate(15deg);
+      }
+    }
+
+    input {
+      border-width: 0px;
+      border-radius: 13px;
+      width: 100%;
+      padding: 5px 15px;
+      font-family: @font-family;
+      font-size: @font-size;
+      letter-spacing: 3px;
+      box-shadow: inset 0 5px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    input[type='email'] {
+      background-color: fade(@green, 10%);
+
+      &,
+      &:hover,
+      &:active,
+      &:focus {
+        -webkit-text-fill-color: @white;
+      }
+
+      &:focus {
+        background-color: fade(@green, 90%);
+      }
+    }
+
+    textarea {
+      background-color: fade(@green, 10%);
+      border-width: 0px;
+      border-radius: 13px;
+      width: 100%;
+      padding: 5px 15px;
+      font-family: @font-family;
+      font-size: @font-size;
+      box-shadow: inset 0 5px 5px rgba(0, 0, 0, 0.2);
+      letter-spacing: 3px;
+
+      &,
+      &:hover,
+      &:active,
+      &:focus {
+        -webkit-text-fill-color: @white;
+      }
+
+      &:focus {
+        background-color: fade(@green, 90%);
+      }
+    }
+
+    input[type='submit'] {
+      background-color: @red;
+      place-content: center;
+      box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0px 0px 50px rgba(0, 0, 0, 0.2);
+      transition: all 0.3s ease;
+      color: @white;
+      cursor: pointer;
+
+      &:hover {
+        transform: scale(1.01) translateY(3px);
+      }
+    }
+  }
+}
+
+.work {
+
+}
+
+/* Responsive Styles */
+@media screen and (max-width: 767px) {
+  .header {
+    #menu {
+      display: none;
+    }
+  }
+
+  .marker {
+    display: none;
+  }
+
+  section {
+    .container {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
+  .about {
+    .profile {
+      .signature {
+        .underline {
+          sub {
+            font-size: @font-size * 2.5;
+          }
+
+          h1 {
+            font-size: @font-size * 2.5;
+          }
+        }
+      }
+
+      .description {
+        p {
+          line-height: @font-size * 1.75;
+        }
+
+        p::first-letter {
+          font-size: @font-size * 1.75;
+        }
+      }
+    }
+
+    .message {
+      display: none;
+    }
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .header {
+    #menu {
+      display: none;
+    }
+  }
+
+  .marker {
+    display: none;
+  }
+
+  section {
+    .container {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
+  .about {
+    .profile {
+      .signature {
+        .underline {
+          sub {
+            font-size: @font-size * 2;
+          }
+
+          h1 {
+            font-size: @font-size * 2;
+          }
+        }
+      }
+
+      .description {
+        p {
+          line-height: @font-size * 1.5;
+        }
+
+        p::first-letter {
+          font-size: @font-size * 1.5;
+        }
+      }
+    }
+
+    .message {
+      display: none;
+    }
+  }
+}
