--- a/src/styles.less
+++ b/src/styles.less
@@ -1,14 +1,39 @@
 /* You can add global styles to this file, and also import other style files */
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 }
 
-html body {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  background-color: #fdfffc;
-  color: #011627;
+// START Here for fullpage.js slider controller
+.fp-controlArrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 45px;
+  height: 45px;
+  cursor: pointer;
+  margin-top: -23px;
+  border-top: 1px solid #FDFFFC;
 }
+
+.fp-prev {
+  left: 45px;
+  border-left: 1px solid #FDFFFC;
+  transform: rotate(-45deg);
+
+  &:hover {
+    border-width: 2px;
+  }
+}
+
+.fp-next {
+  right: 45px;
+  border-right: 1px solid #FDFFFC;
+  transform: rotate(45deg);
+
+  &:hover {
+    border-width: 2px;
+  }
+}
+// END
