--- a/src/styles.less
+++ b/src/styles.less
@@ -15,6 +15,7 @@
   cursor: pointer;
   margin-top: -23px;
   border-top: 1px solid #FDFFFC;
+  transition: all 0.2s ease-in-out;
 }
 
 .fp-prev {
@@ -24,6 +25,7 @@
 
   &:hover {
     border-width: 2px;
+    transform: scale(1.5) rotate(-45deg);
   }
 }
 
@@ -34,6 +36,7 @@
 
   &:hover {
     border-width: 2px;
+    transform: scale(1.5) rotate(45deg);
   }
 }
 // END
