--- a/src/app/views/index/index.component.less
+++ b/src/app/views/index/index.component.less
@@ -66,11 +66,11 @@
     li {
       list-style: none;
       border: 1px solid @white;
-      border-radius: 7px;
-      width: 14px;
-      height: 14px;
-      margin-bottom: 10px;
-      margin-top: 10px;
+      border-radius: 6px;
+      width: 12px;
+      height: 12px;
+      margin-bottom: 12px;
+      margin-top: 12px;
 
       a {
         color: transparent;
@@ -80,11 +80,13 @@
 
       &:hover {
         border-width: 2px;
+        transform: scale(1.5);
       }
     }
 
     .active {
       background-color: @white;
+      transform: scale(1.5);
     }
   }
 }
@@ -290,7 +292,7 @@ section {
     input[type='submit'] {
       background-color: @red;
       place-content: center;
-      box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0px 0px 50px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0px 0px 50px rgba(170, 169, 169, 0.2);
       transition: all 0.3s ease;
       color: @white;
       cursor: pointer;
@@ -303,7 +305,49 @@ section {
 }
 
 .work {
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 10%;
 
+  .card {
+    border-radius: 5px;
+    background-color: fade(@white, 90%);
+    height: 200px;
+    width: 350px;
+    margin: 0 8px 16px;
+    padding: 16px;
+    transition: all 0.2s ease-in-out;
+    line-height: 24px;
+    color: @blue;
+    font-family: @font-family;
+    font-size: @font-size;
+    letter-spacing: 3px;
+
+    &:not(.highlight-card) {
+      cursor: pointer;
+    }
+
+    &:not(.highlight-card):hover {
+      transform: translateY(-3px);
+      box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0px 0px 50px rgba(0, 0, 0, 0.2);
+    }
+
+    img {
+      width: 40px;
+      height: auto;
+      margin-right: 10px;
+    }
+
+    h2 {
+      font-size: @font-size * 2;
+      float: right;
+      margin-top: 25%;
+    }
+
+    p {
+      float: right;
+    }
+  }
 }
 
 /* Responsive Styles */
