Add name attribute

--- a/src/app/views/index/index.component.html
+++ b/src/app/views/index/index.component.html
@@ -75,12 +75,12 @@
         <div class="signature">
           <span class="underline">
             : <sub>x</sub>
-            <h1>{{ username }}</h1></span
-          >
+            <h1>{{ username }}</h1>
+          </span>
         </div>
       </div>
       <div id="message" class="message">
-        <form id="msgform" method="post" data-netlify="true">
+        <form id="msgform" name="contact" method="post" data-netlify="true">
           <div class="message-logo-container">
             <div class="message-logo"></div>
           </div>
